Fixed the alignment issue in mobile <Mark>

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 input {
   width: 100%;
+  border: none;
   &.email-txt {
     width: 74%;
   }
@@ -192,4 +193,15 @@ h3 {
   background: #FC0D1B;
   color: #FFF;
  }
+}
+
+@media screen and (max-width: 1024px) {
+  .flex {
+    flex-wrap: wrap;
+  }
+  .box {
+    &.col-md-6 {
+      width: 100%;
+    }
+  }
 }
